--- a/src/main/resources/templates/pages/index.html
+++ b/src/main/resources/templates/pages/index.html
@@ -12,6 +12,18 @@
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script>
+            function sendData() {
+                $.ajax({
+                    url: "/menu/all,
+                    type: "GET",
+                })
+                .done(function (fragment) {
+                    $('#menuDiv').html(fragment);
+                });
+            }
+        </script>
     </head>
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -31,10 +43,10 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#!">Settings</a></li>
-                        <li><a class="dropdown-item" th:href="@{/session}">session test</a></li>
+                        <li><a class="dropdown-item" href="#!">설정</a></li>
+                        <li><a class="dropdown-item" onclick="sendData();">메뉴 관리</a></li>
                         <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item"  sec:authorize="isAuthenticated()" th:href="@{/logout}">Logout</a></li>
+                        <li><a class="dropdown-item"  sec:authorize="isAuthenticated()" th:href="@{/logout}">로그아웃</a></li>
                     </ul>
                 </li>
             </ul>
@@ -110,8 +122,8 @@
                 </nav>
             </div>
             <div id="layoutSidenav_content">
-                <main>
-                    <div class="container-fluid px-4">
+                <main id="mainDiv">
+                    <!-- <div class="container-fluid px-4">
                         <h1 class="mt-4">Dashboard</h1>
                         <ol class="breadcrumb mb-4">
                             <li class="breadcrumb-item active">Dashboard</li>
@@ -662,7 +674,7 @@
                                 </table>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </main>
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
