1. 회원가입 아이디 중복 체크 추가 2. 로그인 페이지 레이아웃 수정

--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -100,7 +100,8 @@
                             <div class="col-lg-5">
                                 <div class="card shadow-lg border-0 rounded-lg mt-5" style="opacity: 0.8;">
                                     <div class="card-header">
-                                        <img src="img/main.png" style="max-width: 50%; height: 50%;">
+                                        <h3 class="text-center my-4" style="font-weight:1000; font-size:15px;">배용비즈니스</h3>
+                                        <h3 class="text-center my-4" style="font-weight:1000; font-size:30px;">로그인</h3>
                                     <div class="card-body">
                                         <form th:action="@{/login}" method="post" id="loginForm">
                                             <div class="form-floating mb-3">
