--- a/src/main/resources/templates/pages/register.html
+++ b/src/main/resources/templates/pages/register.html
@@ -10,6 +10,11 @@
         <title>회원가입</title>
         <link href="css/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+        <script>
+            window.onload = function() {
+                var id = document.getElementById('overlap');
+            }
+        </script>
     </head>
     <body>
         <div id="layoutAuthentication">
@@ -32,6 +37,7 @@
                                             </div>
                                             <div class="form-floating mb-3">
                                                 <input class="form-control" id="inputEmail" name="account"  placeholder="아이디를 입력해주세요." />
+                                                <div id="overlap" th:text="${overlap}"></div>
                                                 <label for="inputEmail">아이디</label>
                                             </div>
                                             <div class="row mb-3">
