--- a/src/main/resources/templates/pages/menu.html
+++ b/src/main/resources/templates/pages/menu.html
@@ -6,15 +6,15 @@
   <title>Title</title>
 </head>
 <body>
-<div id="div_menu" style="background-color:red; width:30%; float:left;">
+<div id="div_menu" style="background-color:red; width:30%; height:100%; float:left;">
   <table>
     <tr th:each="menu : ${menu}">
       <td th:text="${menu.name}"></td>
     </tr>
   </table>
 </div>
-<div id="div_menu_detail" style="background-color:blue; width:70%; float:left;">
-  일단 네이티브쿼리 어떻게 사용하는지 확인이 필요할 듯 함...
+<div id="div_menu_detail" style="background-color:blue; width:70%; height:100%; float:left;">
+  일단 해결됨
 </div>
 
 </body>
