1. 메뉴 추가 삭제 버튼 추가

--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -98,7 +98,7 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-5">
-                                <div class="card shadow-lg border-0 rounded-lg mt-5" style="opacity: 0.8;">
+                                <div class="card shadow-lg border-0 rounded-lg mt-5">
                                     <div class="card-header">
                                         <h3 class="text-center my-4" style="font-weight:1000; font-size:15px;">배용비즈니스</h3>
                                         <h3 class="text-center my-4" style="font-weight:1000; font-size:30px;">로그인</h3>
@@ -132,7 +132,7 @@
                 </main>
             </div>
             <div id="layoutAuthentication_footer">
-                <footer class="py-4 bg-light mt-auto" style="opacity: 0.5;">
+                <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
                         <div class="d-flex align-items-center justify-content-between small">
                             <div class="text-muted">Copyright &copy; cwpark 2023</div>
