1. 메뉴 레이아웃 수정 및 클릭 이벤트 추가

--- a/src/main/resources/templates/pages/index.html
+++ b/src/main/resources/templates/pages/index.html
@@ -123,7 +123,7 @@
                 </nav>
             </div>
             <div id="layoutSidenav_content">
-                <main id="mainDiv">
+                <main id="mainDiv" style="margin:5px 5px 5px 5px;">
                     <!--
                     <div class="container-fluid px-4">
                         <h1 class="mt-4">Dashboard</h1>
