--- a/src/main/resources/templates/pages/menu.html
+++ b/src/main/resources/templates/pages/menu.html
@@ -4,26 +4,29 @@
 <head>
   <meta charset="UTF-8">
   <title>메뉴관리</title>
-  <link href="css/styles2.css" rel="stylesheet" />
+  <link href="css/styles2.css" rel="stylesheet"/>
+  <script src="js/scripts2.js"></script>
 </head>
 <body>
-<div id="div_menu" style="width:40%; float:left;">
-  <div class="card mb-4" style="width:80%; float:left;">
-    <table id="datatablesSimple">
-      <tbody>
-        <tr th:each="menu : ${menu}">
-          <td th:text="${menu.name}"></td>
-        </tr>
-      </tbody>
-    </table>
+<div id="div_menu" style="width:30%; float:left;">
+  <div class="card mb-4" style="width:70%; float:left;">
+    <div class="card-body">
+      <table id="datatablesSimple">
+        <tbody>
+          <tr th:each="menu : ${menu}">
+            <td th:text="${menu.name}" style="cursor:pointer;" onclick="font_onclick();"></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
-  <div style="width:20%; float:left;">
+  <div style="width:30%; float:left; padding-left:5px;">
     <button class="button_2">추가</button>
     <button class="button_2">삭제</button>
   </div>
 
 </div>
-<div id="div_menu_detail" style="width:60%; float:left;">
+<div id="div_menu_detail" style="width:70%; float:left;">
   일단 해결됨
 </div>
 
