--- a/src/main/resources/templates/pages/index.html
+++ b/src/main/resources/templates/pages/index.html
@@ -123,7 +123,7 @@
                 </nav>
             </div>
             <div id="layoutSidenav_content">
-                <main id="mainDiv" style="margin:5px 5px 5px 5px;">
+                <main id="mainDiv" style="margin:5px 5px 5px 5px; height:90%; width:90%;">
                     <!--
                     <div class="container-fluid px-4">
                         <h1 class="mt-4">Dashboard</h1>
@@ -682,12 +682,7 @@
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
                         <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyright &copy; Your Website 2022</div>
-                            <div>
-                                <a href="#">Privacy Policy</a>
-                                &middot;
-                                <a href="#">Terms &amp; Conditions</a>
-                            </div>
+                            <div class="text-muted">Copyright &copy; cwpark 2023</div>
                         </div>
                     </div>
                 </footer>
