--- a/src/main/resources/templates/pages/index.html
+++ b/src/main/resources/templates/pages/index.html
@@ -14,7 +14,12 @@
         <link rel="icon" href="/img/favicon.png">
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script>
+        <script th:inline="javascript">
+            window.onload = function() {
+                //let page = [[${page}]];
+                //alert(page);
+            }
+
             function sendData() {
                 $.ajax({
                     url: "/menu/all",
