--- a/src/main/resources/templates/pages/menu.html
+++ b/src/main/resources/templates/pages/menu.html
@@ -10,28 +10,40 @@
   let dv;
   let num = 0;
 
+  // 고정 컴포넌트
+  let menuNameL = document.getElementById('menuNameL');
+  let menuName = document.getElementById('menuName');
+  let menuPathL = document.getElementById('menuPathL');
+  let menuPath = document.getElementById('menuPath');
+
   // 저장 데이터
-  function saveTable(event, iRow) {
+  function saveTable(event, iRow, colStatus) {
       let temp = document.getElementById('tempTable');
       let row;
       let cell;
+      let id;
+      let path
 
-      // 값이 변경되었을때도 들어가도록
-      // 삭제가 되었을때 index 등...
-      // 저장 알럿창
-
+      // 수정인 경우도 저장 데이터로 들어가도록 개발(수정데이터가 ...)
+      // 저장 알럿창 개발
       if(event == "insert") {
           row = temp.insertRow();
           row.id = 'data_' + iRow.id;
+          id = iRow.dataset.id == null ? '' : iRow.dataset.id;
+          path = iRow.dataset.path == null ? '' : iRow.dataset.path;
 
           cell = row.insertCell(0);
-          cell.innerHTML = '<input type=\"text\" name=\"menus[' + row.rowIndex + '].parentNum\" value=\"' + iRow.dataset.parentNum + '\"/>';
+          cell.innerHTML = '<input type=\"text\" name=\"menus[' + row.rowIndex + '].parentNum\" value=\"' + iRow.dataset.parentnum + '\"/>';
           cell = row.insertCell(1);
           cell.innerHTML = '<input type=\"text\" name=\"menus[' + row.rowIndex + '].depth\" value=\"' + iRow.dataset.depth + '\"/>';
           cell = row.insertCell(2);
           cell.innerHTML = '<input type=\"text\" name=\"menus[' + row.rowIndex + '].name\" value=\"' + iRow.dataset.name + '\"/>';
           cell = row.insertCell(3);
-          cell.innerHTML = '<input type=\"text\" name=\"menus[' + row.rowIndex + '].path\" value=\"' + iRow.dataset.path + '\"/>';
+          cell.innerHTML = '<input type=\"text\" name=\"menus[' + row.rowIndex + '].path\" value=\"' + path + '\"/>';
+          cell = row.insertCell(4);
+          cell.innerHTML = '<input type=\"text\" name=\"menus[' + row.rowIndex + '].id\" value=\"' + id + '\"/>';
+          cell = row.insertCell(5);
+          cell.innerHTML = '<input type=\"text\" name=\"menus[' + row.rowIndex + '].colStatus\" value=\"' + colStatus + '\"/>';
       } else if(event == "delete") {
           if(document.getElementById('data_' + iRow.id) != null) {
               document.getElementById('data_' + iRow.id).remove();
@@ -41,12 +53,6 @@
 
   // 메뉴 클릭
   function font_onclick() {
-      let menuNameL = document.getElementById('menuNameL');
-      let menuName = document.getElementById('menuName');
-      let menuPathL = document.getElementById('menuPathL');
-      let menuPath = document.getElementById('menuPath');
-      let saveBtn = document.getElementById('saveBtn');
-
       // 이전에 선택한 컴포넌트 원상복구
       if(dv != null) {
           dv.style.color = 'black';
@@ -58,30 +64,32 @@
       // 선택한 컴포넌츠 색상 변경
       dv.style.color = 'blue';
 
-      // 뎁스 0 : 폼 전체 숨김
-      // 뎁스 1 : 메뉴명, 저장버튼 보이기
-      // 뎁스 2 : 메뉴명, 경로, 저장버튼 보이기
-      if(dv.dataset.depth == 2) {
-        menuNameL.style.visibility = "visible";
-        menuName.style.visibility = "visible";
-        menuPathL.style.visibility = "visible";
-        menuPath.style.visibility = "visible";
-        //saveBtn.style.visibility = "visible";
-      } else if(dv.dataset.depth == 1) {
-        menuNameL.style.visibility = "visible";
-        menuName.style.visibility = "visible";
-        menuPathL.style.visibility = "hidden";
-        menuPath.style.visibility = "hidden";
-        //saveBtn.style.visibility = "visible";
-      } else {
-        menuNameL.style.visibility = "hidden";
-        menuName.style.visibility = "hidden";
-        menuPathL.style.visibility = "hidden";
-        menuPath.style.visibility = "hidden";
-        //saveBtn.style.visibility = "hidden";
-      }
-
+      fn_compSet(dv.dataset.depth);
       menuName.value = dv.dataset.name;
+  }
+
+  // 메뉴 컴포넌트 설정
+  function fn_compSet(depth) {
+
+    // 뎁스 0 : 폼 전체 숨김
+    // 뎁스 1 : 메뉴명, 저장버튼 보이기
+    // 뎁스 2 : 메뉴명, 경로, 저장버튼 보이기
+    if(depth == 2) {
+      menuNameL.style.visibility = "visible";
+      menuName.style.visibility = "visible";
+      menuPathL.style.visibility = "visible";
+      menuPath.style.visibility = "visible";
+    } else if(depth == 1) {
+      menuNameL.style.visibility = "visible";
+      menuName.style.visibility = "visible";
+      menuPathL.style.visibility = "hidden";
+      menuPath.style.visibility = "hidden";
+    } else {
+      menuNameL.style.visibility = "hidden";
+      menuName.style.visibility = "hidden";
+      menuPathL.style.visibility = "hidden";
+      menuPath.style.visibility = "hidden";
+    }
   }
 
   // 메뉴 추가
@@ -121,7 +129,7 @@
 
       // 신규 추가 시 초기화
       row.addEventListener("click", () => { font_onclick(); });
-      row.dataset.parentNum = dv.id;
+      row.dataset.parentnum = dv.id;
       row.dataset.depth = Number(parentDepth)+1;
       row.dataset.path = '';
       row.dataset.name = '새 메뉴';
@@ -130,7 +138,7 @@
       cell.style.cursor = 'pointer';
       cell.style.fontWeight = 'bold';
 
-      saveTable('insert', row);
+      saveTable('insert', row, 'N');
   }
 
   // 메뉴 삭제
@@ -146,34 +154,37 @@
 
       if(dv.dataset.status == 'new') {
           table.deleteRow(dv.rowIndex);
-          saveTable('delete', dv);
+          saveTable('delete', dv, 'N');
+          fn_compSet(0);
       // 기존 데이터인 경우 조건에 따라 처리
       } else {
           if(dv.dataset.depth == 0) {
               alert("대메뉴는 삭제할 수 없습니다.");
               return false;
-          // 기존데이터 삭제의 경우 구분값을 주어 Service 에서 처리
-          // 그러나 기존에 값이 존재하는 경우는 삭제못함
-          // 삭제의 경우 색깔을 레드로 변경
-          // 세이브테이블 저장 시 구분값이 필요할듯
           } else if(dv.dataset.depth == 1) {
-
               if(dv.dataset.childcnt != 0) {
+                  // 신규하위메뉴가 있는 경우에도 삭제가 불가능 해야함 아니면 다 삭제되던지
                   alert("하위에 메뉴가 존재하는 경우 삭제가 불가능 합니다.");
                   return false;
               }
 
-              dv.style.color = 'red';
-              saveTable('insert', dv);
+              table.deleteRow(dv.rowIndex);
+              alert(dv.dataset.parentnum);
+              saveTable('insert', dv, 'D');
+              fn_compSet(0);
           } else {
-              saveTable('insert', dv);
+              table.deleteRow(dv.rowIndex);
+              saveTable('insert', dv, 'D');
+              fn_compSet(0);
           }
       }
 
       dv = null;
   }
 
-  // 저장
+  // 기존데이터 수정의 경우 어떻게 처리할지 고민해보기
+
+  // 메뉴 저장
   function fn_save() {
       var menuForm = document.getElementById('menuForm');
 
@@ -196,7 +207,8 @@
         <tbody>
           <tr th:each="menu : ${menu}" onclick="font_onclick();"
               th:id="${menu.id}"
-              th:data-parentNum="${menu.parentNum}"
+              th:data-id="${menu.id}"
+              th:data-parentnum="${menu.parentNum}"
               th:data-depth="${menu.depth}"
               th:data-path="${menu.path}"
               th:data-name="${menu.name}"
